--- a/css/style.css
+++ b/css/style.css
@@ -25,22 +25,51 @@ header .logo img{
 	float: left;
 	width: 236px;
 }
-header > nav.menu-desktop{
+header nav.menu-desktop{
 	float: right;
 }
 header nav.menu-mobile{
-	display: none;
+	z-index: 999;
+	width: 28px;
+	height: 28px;
+	cursor: pointer;
+	background-image: url(../imagens/menu-mobile.png);
+	background-size: 100% 100%;
 }
-header > nav.menu-desktop ul{
+header nav.menu-mobile ul{
+	display: none;
+	background-color: white;
+	position: absolute;
+	top: 65px;
+	left: 0;
+	text-align: center;
+	width: 100%;
+}
+header nav.menu-mobile li:hover{
+	border: 1px solid black;
+	transition: 5s;
+	box-shadow: 1px 1px 5px 1px black;
+}
+header nav.menu-mobile ul li{
+	padding: 10px;
+	list-style-type: none;
+	text-transform: uppercase;
+}
+header nav.menu-mobile a{
+	text-decoration: none;
+	color: #4b4b4b;
+	font-weight: 600 ;	
+}
+header nav.menu-desktop ul{
 	margin: 10px;
 	list-style-type: none;
 }
-header > nav.menu-desktop ul li{
+header nav.menu-desktop ul li{
 	float: left;
 	padding: 0 20px;
 	font-size: 14px;
 }
-header > nav.menu-desktop ul li a{
+header nav.menu-desktop ul li a{
 	text-decoration: none;
 	color: black;
 }
@@ -129,9 +158,83 @@ aside p{
 
 /* *********************** PERFIL *********************** */
 
-/* *********************** RESPONSIVO *********************** */
+/* *********************** VIDEO *********************** */
+section.videos{
+	padding: 50px 0;
+}
+section.videos .box-video{
+	position: relative;
+	float: left;
+	width: 33.3%;
+	padding-top: calc(33.3% * 0.6);
+	border: 5px solid white;
+}
+section.videos iframe{
+	position: absolute;
+	top: 0;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+}
+/* *********************** VIDEO *********************** */
 
-@media screen and (max-width:780px){
+/* *********************** TRATAMENTO *********************** */
+.tratamento-container{
+	width: 100%;
+}
+.tratamentos > h2{
+	text-align: center;
+	color:#6A7386;
+}
+.tratamento-single{
+	padding: 20px 2%;
+	width: 33.3%;
+	float: left;
+}
+.tratamento-container h2{
+	font-size: 18px;
+	color: #737373;
+}
+.tratamento-container p{
+	font-size: 13px;
+	color: #b4b4b4;
+	padding: 10px 0;
+}
+/* *********************** TRATAMENTO *********************** */
+
+/* *********************** RESPONSIVO *********************** */
+@media screen and (max-width:825px){
+	header nav.menu-desktop{
+		display: none;
+	}
+	header nav.menu-mobile{
+		float: right;
+	}
+	header .logo img{
+		float: left;
+		width: 200px;
+	}
+	section.videos{
+		text-align: center;
+	}
+	section.videos .box-video{
+		display: inline-block;
+		float: none;
+		width: 70%;
+		padding-top: calc(100% * 0.6);
+		border: 5px solid white;
+	}
+	section.videos iframe{
+		position: absolute;
+		top: 0;
+		left: 0%;
+		width: 100%;
+		height: 100%;
+	}
+}
+
+
+@media screen and (max-width:580px){
 	section.perfil > .center{
 		flex-direction: column;
 		align-items: center;
@@ -149,8 +252,9 @@ aside p{
 		width: 100%;
 	}
 	section.servicos .center{
-flex-direction: column;
+	flex-direction: column;
 	}
+
 	section.servicos > .center .box-servico:nth-of-type(1){
 		width: 90%;
 		max-width: 364px;
@@ -169,19 +273,13 @@ flex-direction: column;
 		padding: 25px 2%;
 		background-color: #586777;
 	}
+	section.videos .box-video{
+		display: inline-block;
+		float: none;
+		width: 100%;
+		padding-top: calc(100% * 0.6);
+		border: none;
+	}
 }
-@media screen and (max-width:825px){
-	header nav.menu-desktop{
-		display: none;
-	}
-	header nav.menu-mobile{
-		display: block;
-		float: right;
-	}
-	header .logo img{
-		float: left;
-		width: 200px;
-	}
 
-}
 /* *********************** RESPONSIVO *********************** */
